kubernetes/core/network/traefik/app/gateway-int.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway-int
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname "int.${REGION}.${ENVIRONMENT}.${DOMAIN}"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/instance: traefik-network
    app.kubernetes.io/name: traefik
spec:
  gatewayClassName: traefik
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.int.${REGION}.${ENVIRONMENT}.${DOMAIN}"
      name: web
      port: 8000
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.int.${REGION}.${ENVIRONMENT}.${DOMAIN}"
      name: websecure
      port: 8443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: celestio-cloud-tls
        mode: Terminate
