kubernetes/core/network/traefik/app/gateway-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-private
  annotations:
    external-dns.kubernetes.io/target: int.${CLUSTER_NAME}.${DOMAIN}
  labels:
    app.kubernetes.io/instance: traefik-network
    app.kubernetes.io/name: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.int.${REGION}.${ENVIRONMENT}.${DOMAIN}"
      name: web
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.int.${REGION}.${ENVIRONMENT}.${DOMAIN}"
      name: websecure
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - name: celestio-cloud-tls
        mode: Terminate
